Fix background image covering and attachment

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ body {
 }
 
 .app-container {
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
   position: relative;
   display: flex;
@@ -51,6 +51,8 @@ body {
   background-image: url('/assets/bg.png');
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 .page-container {
